--- a/css/styles.css
+++ b/css/styles.css
@@ -584,7 +584,6 @@ address {
 }
 
 /* Footer */
-/* Footer styles */
 .footer {
   background-color: #2e2f42;
   padding-top: 100px;
@@ -686,26 +685,43 @@ address {
 
 .subscribe-form {
   display: flex;
-  gap: 8px;
+  gap: 24px;
 }
 
 .subscribe-input {
-  padding: 10px;
-  border: 1px solid #ccc;
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  background: #fff;
+  color: #ffffff;
+}
+
+.subscribe-input::placeholder {
+  color: #ffffff;
 }
 
 .subscribe-btn {
+  min-width: 165px;
+  height: 40px;
   display: flex;
+  justify-content: center;
   align-items: center;
-  gap: 8px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
   background-color: #4d5ae5;
-  color: white;
-  padding: 10px 16px;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
   transition: background-color 250ms ease-in-out;
 }
 
@@ -714,11 +730,11 @@ address {
 }
 
 .subscribe-btn .icon {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
+  margin-left: 16px;
   fill: #f4f4fd;
 }
-
 /* Modal styles */
 .backdrop {
   position: fixed;
