--- a/css/styles.css
+++ b/css/styles.css
@@ -681,6 +681,8 @@ address {
   font-size: 16px;
   color: #ffffff;
   margin-bottom: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .subscribe-form {
