--- a/css/styles.css
+++ b/css/styles.css
@@ -738,66 +738,64 @@ address {
   fill: #f4f4fd;
 }
 /* Modal styles */
-.backdrop {
+.overlay-container {
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
+  top: 0;
+  bottom: 0;
+  z-index: 999;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(46, 47, 66, 0.4);
   opacity: 0;
-  visibility: hidden;
+  pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-open {
+.overlay-container.is-visible {
   opacity: 1;
-  visibility: visible;
+  pointer-events: auto;
 }
 
-.modal {
+.popup-box {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 72px 24px 24px 24px;
   transform: translate(-50%, -50%);
   width: 408px;
   min-height: 584px;
-  background: #fcfcfc;
+  background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 72px 24px 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close {
+.close-popup {
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   position: absolute;
   top: 24px;
   right: 24px;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.modal-close:hover,
-.modal-close:focus {
+.close-popup:hover {
   background-color: #404bbf;
   border: none;
 }
 
-.modal-title {
+.popup-text {
   font-weight: 500;
   font-size: 16px;
   text-align: center;
@@ -805,51 +803,98 @@ address {
   margin-bottom: 16px;
 }
 
-.contact-form input,
-.contact-form textarea {
-  width: 100%;
+.input-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.input-field {
   border: 1px solid rgba(46, 47, 66, 0.4);
-  background: transparent;
-  outline: none;
-  padding: 5px 38px;
   border-radius: 4px;
+  height: 40px;
+  width: 100%;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-group {
-  margin-bottom: 8px;
-}
-
-.input-container,
-.textarea-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  background: #f4f4fd;
-  border-radius: 4px;
-  padding: 12px;
-}
-
-.input-container:focus-within,
-.textarea-container:focus-within {
+.input-field:focus {
   border-color: #4d5ae5;
 }
 
-.input-container .icon,
-.textarea-container .icon {
+.input-wrapper {
+  position: relative;
+}
+
+.input-icon {
   position: absolute;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  fill: rgba(46, 47, 66, 0.4);
+  fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-container:focus-within .icon {
+.input-field:focus + .input-icon {
   fill: #4d5ae5;
 }
 
-.send-btn {
+.textarea-box {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  background-color: transparent;
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-box:focus {
+  border-color: #4d5ae5;
+}
+
+.checkbox-wrapper {
+  margin-bottom: 24px;
+}
+
+.privacy-label {
+  font-size: 12px;
+  line-height: 1.17;
+  color: #8e8f99;
+  margin-bottom: 24px;
+}
+
+.checkbox-custom {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hidden-checkbox:checked + .privacy-label .checkbox-custom {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.submit-button {
   display: block;
   min-width: 169px;
   height: 56px;
@@ -863,57 +908,14 @@ address {
   font-weight: 500;
 }
 
-.send-btn:hover,
-.send-btn:focus {
+.submit-button:hover {
   background-color: #404bbf;
 }
-
-.checkbox-container {
-  display: flex;
-  align-items: center;
-  margin-bottom: 24px;
-}
-
-.checkbox-container input {
-  display: none;
-}
-
-.checkbox-custom {
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox-container input:checked + label .checkbox-custom {
-  background-color: #404bbf;
-  border: none;
-  fill: #f4f4fd;
-}
-
-.privacy-policy {
-  color: #4d5ae5;
-}
-.order-service-btn {
-  cursor: pointer;
-}
-
-.order-service-btn:focus + .backdrop,
-.order-service-btn:active + .backdrop {
+:target {
   opacity: 1;
+  pointer-events: auto;
   visibility: visible;
 }
-#modal:target {
-  opacity: 1;
-  visibility: visible;
-}
-
-#modal:target .modal {
-  transform: translate(-50%, -50%) scale(1);
+.hidden-checkbox {
+  visibility: hidden;
 }
