--- a/css/styles.css
+++ b/css/styles.css
@@ -804,7 +804,9 @@ address {
 .close-popup .svg-icon-modal {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close-popup:hover .svg-icon-modal,
+.close-popup:hover .svg-icon-modal {
+  fill: #ffffff;
+}
 .close-popup:focus .svg-icon-modal {
   fill: #ffffff;
 }
