--- a/css/styles.css
+++ b/css/styles.css
@@ -791,23 +791,17 @@ address {
   align-items: center;
   padding: 0;
 }
-.close-popup:hover {
-  background-color: #404bbf;
-  border: none;
-}
-
-/* Фокус: тоже изменение цвета и обнуление бордера */
+.close-popup:hover,
 .close-popup:focus {
   background-color: #404bbf;
   border: none;
 }
+
 .close-popup .svg-icon-modal {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close-popup:hover .svg-icon-modal {
-  fill: #ffffff;
-}
-.close-popup:focus .svg-icon-modal {
+.close-popup:hover .svg-icon-modal use,
+.close-popup:focus .svg-icon-modal use {
   fill: #ffffff;
 }
 
@@ -915,24 +909,23 @@ address {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hidden-checkbox:checked + .privacy-label .checkbox-custom {
+.visually-hidden:checked + label .checkbox-custom {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
+
 .policy-link {
-  color: #4d5ae5; /* Синий цвет текста */
-  text-decoration: underline; /* Подчеркивание */
-  text-decoration-skip-ink: none; /* Отключает прерывание подчеркивания */
+  color: #4d5ae5;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Ховер (наведение) */
 .policy-link:hover {
-  color: #404bbf; /* Темно-синий при наведении */
+  color: #404bbf;
 }
 
-/* Фокус (клик или Tab) */
 .policy-link:focus {
   color: #404bbf;
   outline: none;
@@ -962,7 +955,7 @@ address {
   pointer-events: auto;
   visibility: visible;
 }
-.hidden-checkbox {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
