--- a/css/styles.css
+++ b/css/styles.css
@@ -754,7 +754,7 @@ address {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay-container.is-visible {
+.overlay-container {
   opacity: 1;
   pointer-events: auto;
 }
@@ -908,7 +908,7 @@ address {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hidden-checkbox:checked + label .checkbox-custom {
+.visualy-hidden:checked + label .checkbox-custom {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -946,7 +946,7 @@ address {
   background-color: #404bbf;
 }
 
-.visually-hidden {
+.visualy-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
