--- a/css/styles.css
+++ b/css/styles.css
@@ -778,7 +778,8 @@ address {
   width: 24px;
   height: 24px;
   background-color: #e7e9fc;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   position: absolute;
@@ -908,7 +909,7 @@ address {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.visualy-hidden:checked + label .checkbox-custom {
+.visually-hidden:checked + label .checkbox-custom {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -934,8 +935,7 @@ address {
   color: white;
   border: none;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
   font-size: 16px;
   font-weight: 500;
